--- a/css/main.scss
+++ b/css/main.scss
@@ -1,1 +1,11 @@
 @import "normalize";
+
+@import "config";
+@import "mixins";
+
+@import "atoms/typography";
+@import "atoms/base";
+
+@import "molecules/planet";
+@import "molecules/dashboard";
+@import "molecules/astronaut";
