--- a/static/css/main.css
+++ b/static/css/main.css
@@ -517,7 +517,7 @@ header {
 
 #astronaut {
   height: 10em;
-  width: auto;
+  width: 15em;
   position: absolute;
   top: 5em;
   left: 0;
@@ -525,37 +525,39 @@ header {
   z-index: 999;
   margin: auto; }
 
-.left, .-left-leg {
+.-left-leg {
   -webkit-animation-name: left;
-  -webkit-animation-duration: 5s;
+  -webkit-animation-duration: 1s;
   -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
+  -webkit-animation-timing-function: ease-in-out;
   animation-name: left;
-  animation-duration: 5s;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
-  animation-timing-function: linear; }
+  animation-timing-function: ease-in-out; }
 
 @keyframes left {
   100% {
-    transform: rotate(-50 90 160); } }
+    transform: translate(-50px) rotate(-12deg); } }
 @-webkit-keyframes left {
   100% {
-    -webkit-transform: rotate(-50 90 160); } }
-.right, .-right-leg {
+    -webkit-transform: translate(-50px) rotate(-12deg); } }
+.-right-leg {
   -webkit-animation-name: right;
-  -webkit-animation-duration: 5s;
+  -webkit-animation-duration: 1s;
   -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
+  -webkit-animation-timing-function: ease-in-out;
   animation-name: right;
-  animation-duration: 5s;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
-  animation-timing-function: linear; }
+  animation-timing-function: ease-in-out; }
 
 @keyframes right {
+  0% {
+    transform: rotateZ(20deg) translateX(50px) translateY(-50px); }
   100% {
-    transform: rotate(50 90 160); } }
+    transform: rotateZ(20deg) translateX(50px) translateY(-50px); } }
 @-webkit-keyframes right {
   100% {
-    -webkit-transform: rotate(50 90 160); } }
+    -webkit-transform: rotateZ(20deg) translateX(50px) translateY(-50px); } }
 
 /*# sourceMappingURL=main.css.map */
