--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 	<title>Space Walk</title>
 	<meta name="description" content="Space Walk! A 2015 SpaceApps Challenge Submission.">
 
-	<link rel="stylesheet" type="text/css" href="css/main.css"/>
+	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
 </head>
 <body>
 	<header>
