--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html> 
 <html lang="English">
 <head>
+	<script src="../static/js/jquery.js"></script>
+	<script src="../static/js/underscore.js"></script>
+	<script src="../static/js/backbone.js"></script>
 	<script src="../static/js/d3.js"></script>
 	<script src="../static/js/planets.js"></script>
 	<meta charset="utf-8">
