--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
 </head>
 <body>
+	<svg id="pie_chart" height="400" width="400"></svg>
 	<header>
 		<h1>Planet Walk</h1>
 	</header>
