--- a/static/css/main.css
+++ b/static/css/main.css
@@ -356,24 +356,11 @@ td,
 th {
   padding: 0; }
 
-[class^="planet--"] {
+.background, [class^="planet--"] {
   box-shadow: inset 0 0 20px 16px black; }
 
 .dashboard--sun {
   box-shadow: inset 0 0 20px 16px rgba(255, 255, 0, 0.6); }
-
-.dashboard::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 8px;
-  background: linear-gradient(to left, #ed4f75, #ffff00);
-  background: -o-linear-gradient(to left, #ed4f75, #ffff00);
-  background: -moz-linear-gradient(to left, #ed4f75, #ffff00);
-  background: -webkit-gradient(to left, #ed4f75, #ffff00);
-  top: 0;
-  left: 0;
-  right: 0; }
 
 [class^="planet--"] {
   -webkit-animation-name: rotate;
@@ -407,13 +394,21 @@ th {
   text-shadow: 2px 2px 1px #ed4f75; }
 
 body {
-  background: repeat repeat url("../images/space-background.jpg");
   overflow: hidden; }
 
 header {
   position: absolute;
   padding: 2em;
   text-align: left; }
+
+.background {
+  background: repeat repeat url("../images/space-background.jpg");
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  -webkit-filter: blur(1px); }
 
 [class^="planet--"] {
   margin: 0 auto;
@@ -494,7 +489,7 @@ header {
   right: 0;
   left: 0;
   height: 50%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(15, 86, 31, 0.5);
   box-shadow: inset 0 5px 52px 15px rgba(255, 255, 255, 0.3);
   padding: 3em; }
 
@@ -514,6 +509,40 @@ header {
   float: left;
   width: 75%;
   padding-left: 2em; }
+
+.dashboard--planet-slider {
+  cursor: -webkit-grab;
+  position: absolute;
+  top: -7px;
+  right: 0;
+  left: 0; }
+
+.dashboard--planet-slider [type="range"] {
+  width: 100%;
+  -webkit-appearance: none;
+  outline: none;
+  background-color: transparent;
+  color: inherit;
+  box-shadow: none;
+  border-radius: 0;
+  height: 10px;
+  cursor: -webkit-grab;
+  background: linear-gradient(to left, #ed4f75, #ffff00);
+  background: -o-linear-gradient(to left, #ed4f75, #ffff00);
+  background: -moz-linear-gradient(to left, #ed4f75, #ffff00);
+  background: -webkit-gradient(to left, #ed4f75, #ffff00); }
+  .dashboard--planet-slider [type="range"]:focus {
+    cursor: -webkit-grabbing; }
+
+.dashboard--planet-slider [type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background: url("../images/rocket.svg") center center no-repeat;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  cursor: -webkit-grab;
+  height: 7em;
+  width: 7em; }
 
 #astronaut {
   height: 10em;
