--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,8 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
 </head>
 <body>
-<<<<<<< HEAD
 	<svg id="pie_chart" height="400" width="400"></svg>
-=======
 	<div class="background"></div>
->>>>>>> got rocket slider to work
 	<header>
 		<h1>Planet Walk</h1>
 	</header>
@@ -263,14 +260,18 @@
 		<div class="planet--uranus"></div>
 		<div class="planet--neptune"></div>
 	</div>
+
 	<div class="dashboard">
 		<div class="dashboard--planet-slider">
 			<input id="" type="range" name="planet-slider" value="2" min="1" max="8" step="1" data-slider="">
 		</div>
 
-		<div class="dashboard--sun"></div>
+		<div class="dashboard--sun"></div>		
 		<summary class="dashboard--planet-summary">
-			<h2 class="dashboard--planet-name">Earth</h2>
+			<h2 class="dashboard--planet-name">
+			Earth
+			<audio class="dashboard--audio" src="../static/audio/693858main_emfisis_chorus_1.m4r" controls autoplay loop><audio>
+			</h2>
 			<p>Bitters put a bird on it banh mi, art party whatever skateboard American Apparel yr vinyl Carles twee listicle. Biodiesel ugh chillwave, migas cornhole four dollar toast PBR. Lo-fi ethical migas mlkshk jean shorts McSweeney's pork belly, Marfa next level lumbersexual 8-bit beard food truck. Hoodie readymade biodiesel cornhole Helvetica drinking vinegar. Whatever 90's flexitarian Blue Bottle, DIY health goth PBR kogi master cleanse farm-to-table fixie locavore cliche four loko. Blog Marfa quinoa Odd Future, Kickstarter church-key Pinterest hoodie bicycle rights Tumblr pork belly gluten-free cold-pressed keytar. Stumptown sriracha next level readymade, lo-fi street art authentic skateboard bespoke slow-carb synth kale chips vinyl DIY single-origin coffee.</p>
 		</summary>
 	</div>
