--- a/static/css/molecules/_planet.scss
+++ b/static/css/molecules/_planet.scss
@@ -6,7 +6,8 @@ $planet: (
 	saturn: url("../images/saturn.gif"),
 	uranus: url("../images/uranus.gif"),
 	neptune: url("../images/neptune.gif"),
-	sun: url("../images/sun.gif")
+	sun: url("../images/sun.gif"),
+	pluto: url("../images/pluto.gif")
 );
 
 %planet {
