--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,6 @@
 
 	<title>Planet Walk</title>
 	<meta name="description" content="Space Walk! A 2015 SpaceApps Challenge Submission.">
-
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
 </head>
 <body>
@@ -266,7 +265,9 @@
 			<input id="" type="range" name="planet-slider" value="2" min="1" max="8" step="1" data-slider="">
 		</div>
 
-		<div class="dashboard--sun"></div>		
+		<div class="dashboard--sun"></div>
+		<div class="dashboard--pluto"></div>		
+
 		<summary class="dashboard--planet-summary">
 			<h2 class="dashboard--planet-name">
 			Earth
@@ -275,4 +276,11 @@
 			<p>Bitters put a bird on it banh mi, art party whatever skateboard American Apparel yr vinyl Carles twee listicle. Biodiesel ugh chillwave, migas cornhole four dollar toast PBR. Lo-fi ethical migas mlkshk jean shorts McSweeney's pork belly, Marfa next level lumbersexual 8-bit beard food truck. Hoodie readymade biodiesel cornhole Helvetica drinking vinegar. Whatever 90's flexitarian Blue Bottle, DIY health goth PBR kogi master cleanse farm-to-table fixie locavore cliche four loko. Blog Marfa quinoa Odd Future, Kickstarter church-key Pinterest hoodie bicycle rights Tumblr pork belly gluten-free cold-pressed keytar. Stumptown sriracha next level readymade, lo-fi street art authentic skateboard bespoke slow-carb synth kale chips vinyl DIY single-origin coffee.</p>
 		</summary>
 	</div>
+
+	<!--le scripts--> 
+	<script type="text/js" src="../static/js/jquery.js"></script>
+	<script type="text/js" src="../static/js/underscore.js"></script>
+	<script type="text/js" src="../static/js/backbone.js"></script>
+	<script type="text/js" src="../static/js/d3.js"></script>
+	<script type="text/js" src="../static/js/planets.js"></script>
 </body>
