--- a/static/css/main.css
+++ b/static/css/main.css
@@ -356,7 +356,7 @@ td,
 th {
   padding: 0; }
 
-.background, [class^="planet--"] {
+.background, [class^="planet--"], .dashboard--pluto {
   box-shadow: inset 0 0 20px 16px black; }
 
 .dashboard--sun {
@@ -500,6 +500,18 @@ header {
   left: -60px;
   top: -60px;
   background: url("../images/sun.gif") center center no-repeat;
+  background-size: contain;
+  -webkit-background-size: contain;
+  -moz-background-size: contain; }
+
+.dashboard--pluto {
+  height: 6em;
+  width: 6em;
+  border-radius: 50%;
+  position: absolute;
+  right: -40px;
+  top: -40px;
+  background: url("../images/pluto.gif") center center no-repeat;
   background-size: contain;
   -webkit-background-size: contain;
   -moz-background-size: contain; }
