--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 	<meta name="description" content="Space Walk! A 2015 SpaceApps Challenge Submission.">
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
 </head>
-<body>
+<body class="_planetApp_">
 	<svg id="pie_chart" height="400" width="400"></svg>
 	<div class="background"></div>
 	<header>
@@ -271,11 +271,19 @@
 		<summary class="dashboard--planet-summary">
 			<h2 class="dashboard--planet-name">
 			Earth
-			<audio class="dashboard--audio" src="../static/audio/693858main_emfisis_chorus_1.m4r" controls autoplay loop><audio>
+			<!-- <audio class="dashboard--audio" src="../static/audio/693858main_emfisis_chorus_1.m4r" controls autoplay loop><audio> -->
 			</h2>
 			<p>Bitters put a bird on it banh mi, art party whatever skateboard American Apparel yr vinyl Carles twee listicle. Biodiesel ugh chillwave, migas cornhole four dollar toast PBR. Lo-fi ethical migas mlkshk jean shorts McSweeney's pork belly, Marfa next level lumbersexual 8-bit beard food truck. Hoodie readymade biodiesel cornhole Helvetica drinking vinegar. Whatever 90's flexitarian Blue Bottle, DIY health goth PBR kogi master cleanse farm-to-table fixie locavore cliche four loko. Blog Marfa quinoa Odd Future, Kickstarter church-key Pinterest hoodie bicycle rights Tumblr pork belly gluten-free cold-pressed keytar. Stumptown sriracha next level readymade, lo-fi street art authentic skateboard bespoke slow-carb synth kale chips vinyl DIY single-origin coffee.</p>
 		</summary>
 	</div>
+
+	<script type="text/template" id="planetInfo">
+		<h2 class="dashboard--planet-name">
+			<%= planet.name %>
+			<audio class="dashboard--audio" src="<%= planet.audio %>" mute controls loop><audio>
+		</h2>
+		<p><%= planet.description %></p>
+	</script>
 
 	<!--le scripts--> 
 	<script type="text/js" src="../static/js/jquery.js"></script>
