--- a/templates/index.html
+++ b/templates/index.html
@@ -250,19 +250,20 @@
 
 	</div>
 
-	<div class="planet -earth">
+	<div class="planet">
 		<div class="planet--mercury"></div>
 		<div class="planet--venus"></div>
 		<div class="planet--earth"></div>
 		<div class="planet--mars"></div>
 		<div class="planet--saturn"></div>
+		<div class="planet--jupiter"></div>
 		<div class="planet--uranus"></div>
 		<div class="planet--neptune"></div>
 	</div>
 
 	<div class="dashboard">
 		<div class="dashboard--planet-slider">
-			<input id="" type="range" name="planet-slider" value="2" min="1" max="8" step="1" data-slider="">
+			<input id="planetSlider" type="range" name="planet-slider" value="2" min="1" max="8" step="1" data-slider="">
 		</div>
 
 		<div class="dashboard--sun"></div>
