--- a/templates/index.html
+++ b/templates/index.html
@@ -274,6 +274,7 @@
 	<script type="text/template" id="planetInfo">
 		<h2 class="dashboard--planet-name">
 			<%= planet.name %>
+			<span class="dashboard--blinking-cursor"></span>
 			<audio class="dashboard--audio" src="<%= planet.audio %>" mute controls loop><audio>
 		</h2>
 		<p><%= planet.description %></p>
