--- a/static/css/molecules/_astronaut.scss
+++ b/static/css/molecules/_astronaut.scss
@@ -1,8 +1,8 @@
 #astronaut {
-	height: 13em;
+	height: 20%;
 	width: 15em;
 	position: absolute;
-	top: 3em;
+	top: 5%;
 	left: 0;
 	right: 0;
 	z-index: 999;
