--- a/templates/index.html
+++ b/templates/index.html
@@ -22,10 +22,13 @@
 
 	<svg id="pie_chart" height="400" width="400"></svg>
 	<div class="background"></div>
+	<div class="_solarDays_"></div>
+
 	<header>
 		<h1>Planet Walk!</h1>
-		<small>To get started, drag the Rocket Ship to another planet!</small>
+		<small>To get started, drag the Rocket Ship to another planet!</small></br>
 		<audio id="spaceClicks" class="dashboard--audio" src="../static/audio/sounds.m4r" controls  loop volume="0"></audio>
+		<small>All materials and information from <a href="http://solarsystem.nasa.gov/planets/" title="Nasa">Solarsystem.nasa.gov<a/>, <a href="http://www.nasa.gov/connect/sounds/" title="Nasa Sounds">Nasa.gov Sounds<a/>, and <a href="http://pds-imaging.jpl.nasa.gov/volumes/" title="Nasa Images">Nasa.gov Images<a/>.</small>
 	</header>
 
 	<div class="astronaut">	
