--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 		<h1>Planet Walk!</h1>
 		<small>To get started, drag the Rocket Ship to another planet!</small></br>
 		<audio id="spaceClicks" class="dashboard--audio" src="../static/audio/sounds.m4r" controls  loop volume="0"></audio>
-		<small>All materials and information from <a href="http://solarsystem.nasa.gov/planets/" title="Nasa">Solarsystem.nasa.gov<a/>, <a href="http://www.nasa.gov/connect/sounds/" title="Nasa Sounds">Nasa.gov Sounds<a/>, and <a href="http://pds-imaging.jpl.nasa.gov/volumes/" title="Nasa Images">Nasa.gov Images<a/>.</small>
+		<small>All materials and information from <a href="http://solarsystem.nasa.gov/planets/" title="Nasa">Solarsystem.nasa.gov<a/>, <a href="http://www.nasa.gov/connect/sounds/" title="Nasa Sounds">Nasa.gov Sounds<a/>, <a href="https://pds.nasa.gov/" title="Nasa PDS">Nasa PDS<a/>, and <a href="http://pds-imaging.jpl.nasa.gov/volumes/" title="Nasa Images">Nasa.gov Images<a/>.</small>
 	</header>
 
 	<div class="astronaut">	
@@ -277,6 +277,7 @@
 		<div class="dashboard--pluto"></div>		
 
 		<summary class="dashboard--planet-summary"></summary>
+		<div id="planet_stats"></div>
 	</div>
 
 	<script type="text/template" id="planetInfo">
